Jul 20, 2009 - chris 
o added ham_env_get_parameters, ham_db_get_parameters and
    functions for approximate matching (all from Ger Hobbelt, 
    http://www.hobbelt.com, http://www.hebbut.net)

Jul 19, 2009 - chris 
o added various new asserts, code cleanups, win32 improvements/security
    improvements and new tests (all from Ger Hobbelt, http://www.hobbelt.com,
    http://www.hebbut.net)

Mar 05, 2009 - chris ---------------------------------------------------
                      release of hamsterdb-1.0.9

May 13, 2009 - chris 
o removed the dependency to cppunit (replaced it with my own tiny acceptance
    test framework)

May 12, 2009 - chris 
o fixed segmentation fault when using a Cursor to iterate over all keys
    and the record parameter is NULL and compression is enabled, then
    hamsterdb tried to compress the NULL record (thanks, Jiezg)

Mar 01, 2009 - chris ---------------------------------------------------
                      release of hamsterdb-1.0.8

Feb 28, 2009 - chris 
o fixed bug when shifting internal pages (during SMO of erase); extended
    keys were deleted although they were still referenced

Feb 23, 2009 - chris ---------------------------------------------------
                      release of hamsterdb-1.0.7

Feb 20, 2009 - chris 
o fixed endian conversion bug when opening a Database file, which was created
    on a little-endian system, some page addresses were broken

Sep 23, 2008 - chris ---------------------------------------------------
                      release of hamsterdb-1.0.6

Sep 14, 2008 - chris
o a new flag HAM_CACHE_UNLIMITED uses unlimited cache
o added a new chapter about Transactions to the tutorial

Sep 12, 2008 - chris
o ./configure has a new option --enable-system-zlib which links against the 
    system-wide installed zlib (-lz)

Sep 11, 2008 - chris
o unittests now compile with gcc 4.3.x and glibc 2.8 (thanks, Tiziano Müller)
o C++ api now has template function for class key: key.set<T>(T &t)