@@ -1,3 +1,8 @@
+Jul 25, 2009 - chris 
+o bugfix: when an Environment is created (or opened), the header page was
+    not immediately written (or read); therefore settings were lost, unless
+    a database was created (or opened) - Thanks, Ger Hobbelt
+
 Jul 20, 2009 - chris 
 o added ham_env_get_parameters, ham_db_get_parameters and
     functions for approximate matching (all from Ger Hobbelt, 
